--- a/Expense Tracker/Base.lproj/Main.storyboard
+++ b/Expense Tracker/Base.lproj/Main.storyboard
@@ -1,24 +1,165 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rCx-RP-i14">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Expense_Tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UE8-iy-iCJ">
+                                <rect key="frame" x="16" y="119" width="361" height="52"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" staticText="YES" header="YES"/>
+                                </accessibility>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="8cy-fa-IsN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UE8-iy-iCJ" secondAttribute="trailing" constant="16" id="Bev-W9-FMF"/>
+                            <constraint firstItem="UE8-iy-iCJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="E4C-tA-fKI"/>
+                            <constraint firstItem="UE8-iy-iCJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="c9d-pT-saq"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="nOr-L5-mW0">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="xJN-Bz-QL3">
+                            <connections>
+                                <action selector="addExpenseButtonTapped:" destination="BYZ-38-t0r" id="x96-vV-5Sc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="totalAmountLabel" destination="UE8-iy-iCJ" id="YO4-jU-uGN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="999.23664122137404" y="4.9295774647887329"/>
+        </scene>
+        <!--Add View Controller-->
+        <scene sceneID="CwI-dW-aJ2">
+            <objects>
+                <viewController storyboardIdentifier="AddViewController" id="U2I-Fr-ueF" customClass="AddViewController" customModule="Expense_Tracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Q8T-qR-Yvl">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Expence" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AgD-QO-gfw">
+                                <rect key="frame" x="16" y="75" width="361" height="52"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" staticText="YES" header="YES"/>
+                                </accessibility>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="gMs-Ok-cIv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="top" axis="vertical" spacing="58" translatesAutoresizingMaskIntoConstraints="NO" id="7fC-c7-CTc">
+                                <rect key="frame" x="16" y="143" width="361" height="574"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P3G-5N-lJ2">
+                                        <rect key="frame" x="0.0" y="0.0" width="361" height="52"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="52" id="eWn-Qi-X8h"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hfw-hF-422">
+                                        <rect key="frame" x="0.0" y="110" width="361" height="52"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="52" id="1RA-uw-Tsm"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="5" translatesAutoresizingMaskIntoConstraints="NO" id="NXQ-yb-req">
+                                        <rect key="frame" x="0.0" y="220" width="361" height="80"/>
+                                    </datePicker>
+                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jJZ-WU-bDH">
+                                        <rect key="frame" x="0.0" y="358" width="361" height="216"/>
+                                    </pickerView>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BCt-Wm-p0r">
+                                <rect key="frame" x="16" y="782" width="361" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="PGK-Ci-gg7"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Save"/>
+                                <connections>
+                                    <action selector="saveExpenceButtonTapped:" destination="U2I-Fr-ueF" eventType="touchDown" id="sUa-Xg-d0M"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="uyc-Jb-IvT"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="BCt-Wm-p0r" firstAttribute="leading" secondItem="uyc-Jb-IvT" secondAttribute="leading" constant="16" id="2Fm-sg-RLo"/>
+                            <constraint firstItem="BCt-Wm-p0r" firstAttribute="bottom" secondItem="uyc-Jb-IvT" secondAttribute="bottom" constant="16" id="DEO-oQ-oYH"/>
+                            <constraint firstItem="AgD-QO-gfw" firstAttribute="top" secondItem="uyc-Jb-IvT" secondAttribute="top" constant="16" id="ZPb-Zf-2BD"/>
+                            <constraint firstItem="AgD-QO-gfw" firstAttribute="leading" secondItem="uyc-Jb-IvT" secondAttribute="leading" constant="16" id="cBq-5R-HwB"/>
+                            <constraint firstItem="7fC-c7-CTc" firstAttribute="leading" secondItem="uyc-Jb-IvT" secondAttribute="leading" constant="16" id="ePZ-KP-plk"/>
+                            <constraint firstItem="uyc-Jb-IvT" firstAttribute="trailing" secondItem="BCt-Wm-p0r" secondAttribute="trailing" constant="16" id="gZp-jP-yRe"/>
+                            <constraint firstItem="uyc-Jb-IvT" firstAttribute="trailing" secondItem="AgD-QO-gfw" secondAttribute="trailing" constant="16" id="lc0-V1-BeZ"/>
+                            <constraint firstItem="7fC-c7-CTc" firstAttribute="top" secondItem="AgD-QO-gfw" secondAttribute="bottom" constant="16" id="pvU-kz-IRo"/>
+                            <constraint firstItem="uyc-Jb-IvT" firstAttribute="trailing" secondItem="7fC-c7-CTc" secondAttribute="trailing" constant="16" id="uKt-cG-JPm"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="70q-zc-90W"/>
+                    <connections>
+                        <outlet property="amountTextField" destination="hfw-hF-422" id="P55-JV-Iru"/>
+                        <outlet property="datePicker" destination="NXQ-yb-req" id="Fp2-Td-P86"/>
+                        <outlet property="nameTextField" destination="P3G-5N-lJ2" id="2IR-tr-KM3"/>
+                        <outlet property="pickerView" destination="jJZ-WU-bDH" id="EJU-lX-vrX"/>
+                        <outlet property="saveExpenceButton" destination="BCt-Wm-p0r" id="25H-0d-yVF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FHL-N1-4GC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1878.6259541984732" y="4.9295774647887329"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ESz-LN-1Ys">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rCx-RP-i14" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hKb-TC-sIn">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="sQG-g5-Sj5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BzR-xA-m5o" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="72.51908396946564" y="4.9295774647887329"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
